--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -17,3 +17,11 @@
   width: 75%;
   border-style: none;
 }
+
+.filter:focus-within {
+  outline-width: 2px;
+  outline-offset: 2px;
+  outline-style: double;
+  outline-color: rgb(73, 124, 133);
+  box-shadow: rgb(195, 245, 245) 0px 10px 10px -5px;
+}
